# ical_reminder

./: .envrc  CLAUDE.md  README.md  cal.py  pyproject.toml  reminder_window.py  start.sh  test_cal.py
